[tool.poetry]
name = "alice-chatgpt-api"
version = "0.1.0"
description = ""
authors = ["chubukovmn <ay-ya@ya.ru>"]
readme = "README.md"
packages = [{include = "yandex_alice_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
openai = "^0.26.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

